회원가입 & 로그인 API

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -22,3 +22,6 @@ header, .sign-up-box, .shadow-box, .head {background-color:#ebebeb;}
 
 .comment-input {width:565px;}
 #login-section{width: 600px;}
+
+.login-box {width:250px;}
+.input-group-text {width:50px;}
