댓글 꾸리기 & 타임라인 구성 수정 예정 & 프로필 꾸리기 + 한 사람이 올린 글 모음 & 프로필 수정 레이아웃

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -24,3 +24,9 @@ header, .sign-up-box, .shadow-box, .head, #addCommentBtn {background-color:#ebeb
 
 .login-box {width:250px;}
 .input-group-text {width:50px;}
+
+.profile-box {height:200px;}
+.profileBtn {padding-top:5px; padding-bottom:5px; font-size:80%;}
+
+.update-profile-box {width:550px;}
+.update-profile-subject {font-weight:bold;}
